unpackaged/main/default/objects/iCLightning__iContact_Message_Statistic__c/iCLightning__iContact_Message_Statistic__c.object-meta.xml
<CustomObject>
    <description>Contains the statistics for an individual message recipient from iContact.</description>
    <label>iContact Message Statistic - Lightning</label>
    <nameField>
        <label>Recipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iContact Message Statistics - Lightning</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>