unpackaged/main/default/objects/iCLightning__iContact_Message_Statistic__c/fields/iCLightning__Bounced__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Bounced__c</fullName>
    <description>If this recipient's email bounced, this field contains the date/time of the latest bounce.</description>
    <inlineHelpText>If this recipient's email bounced, this field contains the date/time of the latest bounce.</inlineHelpText>
    <label>Bounced Date</label>
    <type>DateTime</type>
</CustomField>