unpackaged/main/default/objects/iCLightning__iContact_Message_Statistic__c/fields/iCLightning__Campaign__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The campaign that is associated with this statistic.</description>
    <inlineHelpText>The campaign that is associated with this statistic.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>iContact_Message_Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>