unpackaged/main/default/objects/iCLightning__iContact_Message_Statistic__c/fields/iCLightning__Clicked__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Clicked__c</fullName>
    <description>If this recipient clicked on the email, this field contains the date/time of the latest click.</description>
    <inlineHelpText>If this recipient clicked on the email, this field contains the date/time of the latest click.</inlineHelpText>
    <label>Last Clicked</label>
    <type>DateTime</type>
</CustomField>