unpackaged/main/default/objects/iCLightning__iContact_Message_Statistic__c/fields/iCLightning__Clicks__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Clicks__c</fullName>
    <description>Number of time this contact clicked a link in the message.</description>
    <inlineHelpText>Number of time this contact clicked a link in the message.</inlineHelpText>
    <label>Total Clicks - Lightning</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>