unpackaged/main/default/objects/iCLightning__iContact_Message_Statistic__c/fields/iCLightning__iContact_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__iContact_Contact_ID__c</fullName>
    <description>The iContact ID of the contact this message was sent to.</description>
    <inlineHelpText>The iContact ID of the contact this message was sent to.</inlineHelpText>
    <label>iContact Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>