unpackaged/main/default/objects/iCLightning__iContact_Message_Statistic__c/fields/iCLightning__iContact_Contact_ID_F__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__iContact_Contact_ID_F__c</fullName>
    <description>The iContact ID of the contact this message was sent to.</description>
    <formula>iCLightning__iContact_Contact_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The iContact ID of the contact this message was sent to.</inlineHelpText>
    <label>iContact Contact ID - Lightning</label>
    <type>Text</type>
</CustomField>