unpackaged/main/default/objects/iCLightning__iContact_Message_Statistic__c/fields/iCLightning__iContact_Sent_Message__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__iContact_Sent_Message__c</fullName>
    <label>iContact Email Message - Lightning</label>
    <referenceTo>iCLightning__iContact_Sent_Message__c</referenceTo>
    <relationshipLabel>iContact Message Statistics - Lightning</relationshipLabel>
    <relationshipName>iContact_Message_Statistics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>