unpackaged/main/default/objects/iCLightning__iContact_Message_Statistic__c/fields/iCLightning__Lead__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the campaign member this statistic is for was from a Lead, this field will hold the ID of the Lead.</description>
    <inlineHelpText>If the campaign member this statistic is for was from a Lead, this field will hold the ID of the Lead.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>iContact_Message_Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>