unpackaged/main/default/objects/iCLightning__iContact_Message_Statistic__c/fields/iCLightning__Opens__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Opens__c</fullName>
    <description>Number of time this contact opened the message.</description>
    <inlineHelpText>Number of time this contact opened the message.</inlineHelpText>
    <label>Total Opens - Lightning</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>