unpackaged/main/default/objects/iCLightning__iContact_Message_Statistic__c/fields/iCLightning__Recipient_ID__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Recipient_ID__c</fullName>
    <externalId>true</externalId>
    <label>Recipient_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>