unpackaged/main/default/objects/iCLightning__iContact_Message_Statistic__c/fields/iCLightning__Total_Clicks_F__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Total_Clicks_F__c</fullName>
    <description>Number of time this contact clicked a link in the message.</description>
    <formula>TEXT(iCLightning__Clicks__c)</formula>
    <inlineHelpText>Number of time this contact clicked a link in the message.</inlineHelpText>
    <label>Total Clicks</label>
    <type>Text</type>
</CustomField>