unpackaged/main/default/objects/iCLightning__iContact_Message_Statistic__c/fields/iCLightning__Total_Opens_F__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Total_Opens_F__c</fullName>
    <description>Number of time this contact opened the message.</description>
    <formula>TEXT(iCLightning__Opens__c)</formula>
    <inlineHelpText>Number of time this contact opened the message.</inlineHelpText>
    <label>Total Opens</label>
    <type>Text</type>
</CustomField>